--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@ignite-ui/react": "^2.2.4",
     "next": "14.0.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^4.11.0"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
