--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ignite-ui/react": "^2.2.4",
+    "date-fns": "^2.30.0",
     "devextreme": "23.1.6",
     "devextreme-react": "23.1.6",
     "next": "14.0.2",
