--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "date-fns": "^2.30.0",
     "devextreme": "23.1.6",
     "devextreme-react": "23.1.6",
+    "jspdf": "^2.5.1",
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
